@@ -41,6 +41,7 @@ Views 6.x-3.x-dev
     o #324873 by dagmar: Show all paths when listing views, not just the first path.
     o #99370 by dagmar: Allow a "reset" button as part of the exposed filters.
     o #619812 by chx: Break up the query() method on the query plugin to have field compilation be separate.
+    o #338584 by superbaloo: Allow displays to be re-ordered in the UI.
 
 Views 6.x-3.0-alpha1
   Bugs fixed
